--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
         function Staff() {
             const staff = [
-                { name: "Elizabeth Korzh", role: "Manager", image: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60" },
+                { name: "Elizabeth Korzh", role: "Manager", image: "" },
                 { name: "Duc Anh Nguyen", role: "Event-Koordinatorin", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
-                { name: "Thi Kieu Trieu", role: "Barkeeper", image: "https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60" },
+                { name: "Thi Kieu Trieu", role: "Barkeeper", image: "" },
                 { name: "Diya", role: "Kundenservice", image: "https://images.unsplash.com/photo-1517841903205-20c53b44db06?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60" }
             ];
 
