--- a/index.html
+++ b/index.html
@@ -1,4 +1,43 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,6 +75,7 @@
                                 <li><a href="#home" className="hover:text-cyan-400">Startseite</a></li>
                                 <li><a href="#courses" className="hover:text-cyan-400">Golfplätze</a></li>
                                 <li><a href="#bar" className="hover:text-cyan-400">Bar</a></li>
+                                <li><a href="#video-tour" className="hover:text-cyan-400">Video-Tour</a></li>
                                 <li><a href="#staff" className="hover:text-cyan-400">Team</a></li>
                                 <li><a href="#contact" className="hover:text-cyan-400">Kontakt</a></li>
                             </ul>
@@ -47,7 +87,7 @@
 
         function Hero() {
             return (
-                <section id="home" className="h-screen flex items-center justify-center bg-cover bg-center" style={{ backgroundImage: "url('https://cdn.prod.website-files.com/62a7764c17286f703aca51d4/62fff0a1a23f224689fe677a_Glo%20Mini27.jpg')" }}>
+                <section id="home" className="h-screen flex items-center justify-center bg-cover bg-center" style={{ backgroundImage: "url('https://images.ctfassets.net/3dar4x4x74wk/ZkPUhD5XIrNhjYwnWGzjP/d9feaebbc07efcae85d05d6c3741f4f9/EventHeaderDesktopR.jpg?w=808')" }}>
                     <div className="text-center bg-black bg-opacity-60 p-8 rounded-lg">
                         <h2 className="text-6xl font-bold neon-text mb-4">Pull in the Dark</h2>
                         <p className="text-xl mb-6">Tauche ein in neonbeleuchtete Golfplätze und genieße einen Drink an unserer lebendigen Bar.</p>
@@ -97,6 +137,23 @@
                                 <a href="#" className="bg-cyan-500 text-black py-2 px-4 rounded-full font-bold hover:bg-cyan-400">Speisekarte Ansehen</a>
                             </div>
                         </div>
+                    </div>
+                </section>
+            );
+        }
+
+        function VideoTour() {
+            return (
+                <section id="video-tour" className="py-16">
+                    <div className="container mx-auto px-4">
+                        <h2 className="text-4xl font-bold text-center neon-text mb-12">Video-Tour</h2>
+                        <div className="flex justify-center">
+                            <video controls className="w-full max-w-3xl rounded-lg border border-cyan-400">
+                                <source src="https://drive.google.com/uc?export=download&id=1LFk5xmnO26nYvHdmECSLDrrNCVOljFfg" type="video/mp4" />
+                                Dein Browser unterstützt das Video-Tag nicht.
+                            </video>
+                        </div>
+                        <p className="text-center text-lg text-gray-300 mt-6">Erlebe eine virtuelle Tour durch unsere neonbeleuchteten Golfplätze!</p>
                     </div>
                 </section>
             );
@@ -165,6 +222,7 @@
                     <Hero />
                     <Courses />
                     <Bar />
+                    <VideoTour />
                     <Staff />
                     <Contact />
                     <Footer />
