--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         function Hero() {
             return (
-                <section id="home" className="h-screen flex items-center justify-center bg-cover bg-center" style={{ backgroundImage: "url('https://images.ctfassets.net/3dar4x4x74wk/ZkPUhD5XIrNhjYwnWGzjP/d9feaebbc07efcae85d05d6c3741f4f9/EventHeaderDesktopR.jpg?w=808')" }}>
+                <section id="home" className="h-screen flex items-center justify-center bg-cover bg-center" style={{ backgroundImage: "url('https://cdn.prod.website-files.com/62a7764c17286f703aca51d4/62fff0a1a23f224689fe677a_Glo%20Mini27.jpg')" }}>
                     <div className="text-center bg-black bg-opacity-60 p-8 rounded-lg">
                         <h2 className="text-6xl font-bold neon-text mb-4">Pull in the Dark</h2>
                         <p className="text-xl mb-6">Tauche ein in neonbeleuchtete Golfplätze und genieße einen Drink an unserer lebendigen Bar.</p>
