--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Video-Tour</h2>
                         <div className="flex justify-center">
                             <video controls className="w-full max-w-3xl rounded-lg border border-cyan-400">
-                                <source src="https://drive.google.com/uc?export=download&id=1LFk5xmnO26nYvHdmECSLDrrNCVOljFfg" type="video/mp4" />
+                                <source src="/video(1).mp4" type="video/mp4"/>
                                 Dein Browser unterstützt das Video-Tag nicht.
                             </video>
                         </div>
