--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 
         function Staff() {
             const staff = [
-                { name: "Elizabeth Korzh", role: "Manager", image: "" },
-                { name: "Duc Anh Nguyen", role: "Event-Koordinatorin", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
-                { name: "Thi Kieu Trieu", role: "Barkeeper", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6807eb60&is=680699e0&hm=95b94b47126f89c022d25a2bd2b85253bf0d750eb0a984aa7f4d9a689dbb061b&=&format=webp&width=1214&height=930" },
-                { name: "Diya", role: "Kundenservice", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956837829050388/IMG-20250421-WA0010.jpg?ex=6807eb4b&is=680699cb&hm=2064683781e72984534d33ca15dc9d2c1fecf5248011f1984ab485a0caa95e73&=&format=webp&width=460&height=601" }
+                { name: "Elizabeth Korzh", role: "Managerin", image: "" },
+                { name: "Duc Anh Nguyen", role: "Event-Koordinator", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
+                { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6807eb60&is=680699e0&hm=95b94b47126f89c022d25a2bd2b85253bf0d750eb0a984aa7f4d9a689dbb061b&=&format=webp&width=1214&height=930" },
+                { name: "Diya", role: "Kundenservice", image: "https://media.discordapp.net/attachments/1022913165194960987/1363958869914554388/IMG-20250421-WA0010.jpg?ex=6807ed2f&is=68069baf&hm=c76b012822ef53137d01b1f59fe3cf6ff9493b0df57732ffc6426edb7ab51e50&=&format=webp&width=460&height=601" }
             ];
 
             return (
