--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 { name: "Elizabeth Korzh", role: "Managerin", image: "" },
                 { name: "Duc Anh Nguyen", role: "Event-Koordinator", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
                 { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6807eb60&is=680699e0&hm=95b94b47126f89c022d25a2bd2b85253bf0d750eb0a984aa7f4d9a689dbb061b&=&format=webp&width=1214&height=930" },
-                { name: "Diya", role: "Kundenservice", image: "https://media.discordapp.net/attachments/1022913165194960987/1363960507027165234/20250421_213144.jpg?ex=6807eeb6&is=68069d36&hm=217decfa42e8d640b18673ce9e81633f50059b6307875f132f79a7c93012528a&=&format=webp&width=460&height=601" }
+                { name: "Diya", role: "Kundenservice", image: "https://cdn.discordapp.com/attachments/1022913165194960987/1363960957717713009/IMG-20250421-WA0010.jpg?ex=6807ef21&is=68069da1&hm=3dfb7b3f921e7912c54951a8ab255700550b158bc6e09e118c8fb01660457e7f&" }
             ];
 
             return (
