--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
         function Staff() {
             const staff = [
-                { name: "Elizabeth Korzh", role: "Managerin", image: "" },
+                { name: "Elizabeth Korzh", role: "Managerin", image: "https://media.discordapp.net/attachments/1022913165194960987/1364535368287780915/IMG-20250423-WA0012.jpg?ex=680a0617&is=6808b497&hm=50ce87cb45dd773f1f583173e891860b770a766d6c63ed56ff720e3929f7d279&=&format=webp&width=698&height=930" },
                 { name: "Duc Anh Nguyen", role: "Event-Koordinator", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
                 { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6807eb60&is=680699e0&hm=95b94b47126f89c022d25a2bd2b85253bf0d750eb0a984aa7f4d9a689dbb061b&=&format=webp&width=1214&height=930" },
                 { name: "Diya", role: "Kundenservice", image: "https://cdn.discordapp.com/attachments/1022913165194960987/1363961128564162670/IMG-20250421-WA0010.jpg?ex=6807ef4a&is=68069dca&hm=21374f26b5222d23afee5e74d3b985d4bdfb22a5a6af5df2df0b67e1c6e6740b&" }
