--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
             const staff = [
                 { name: "Elizabeth Korzh", role: "Managerin", image: "https://media.discordapp.net/attachments/1022913165194960987/1364543227075756072/IMG-20250423-WA0012.jpg?ex=680a0d69&is=6808bbe9&hm=d0fcf3d323441e7ed022883064d4afdefa8e967d470a56dc303ed10220ecba0c&=&format=webp&width=996&height=930" },
                 { name: "Duc Anh Nguyen", role: "Event-Koordinator", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
-                { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6807eb60&is=680699e0&hm=95b94b47126f89c022d25a2bd2b85253bf0d750eb0a984aa7f4d9a689dbb061b&=&format=webp&width=1214&height=930" },
-                { name: "Diya", role: "Kundenservice", image: "https://cdn.discordapp.com/attachments/1022913165194960987/1363961128564162670/IMG-20250421-WA0010.jpg?ex=6807ef4a&is=68069dca&hm=21374f26b5222d23afee5e74d3b985d4bdfb22a5a6af5df2df0b67e1c6e6740b&" }
+                { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6809e5a0&is=68089420&hm=de67c40f2779f762b9be6e7277d2008fbe1b3f906f29d21f6c6bbb7598e60a51&=&format=webp&width=1214&height=930" },
+                { name: "Diya", role: "Kundenservice", image: "https://media.discordapp.net/attachments/1022913165194960987/1363961128564162670/IMG-20250421-WA0010.jpg?ex=6809e98a&is=6808980a&hm=7444db6bfef4620183a417e886ae80d8ccfb8adcfeb71a21c72d8b3050ca9e05&=&format=webp&width=589&height=770" }
             ];
 
             return (
