--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         }
         return gk_fileData[filename] || "";
         }
-        </script><!DOCTYPE html>
+</script>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,18 +67,26 @@
 
     <script type="text/babel">
         function Header() {
+            const handleScroll = (id) => {
+                const element = document.getElementById(id);
+                if (element) {
+                    element.scrollIntoView({ behavior: 'smooth' });
+                }
+            };
+
             return (
                 <header className="bg-black bg-opacity-80 py-6 border-b-2 border-cyan-400">
                     <div className="container mx-auto flex justify-between items-center px-4">
                         <h1 className="text-4xl font-bold neon-text">Neon Golf</h1>
                         <nav>
                             <ul className="flex space-x-6">
-                                <li><a href="#home" className="hover:text-cyan-400">Startseite</a></li>
-                                <li><a href="#courses" className="hover:text-cyan-400">Golfplätze</a></li>
-                                <li><a href="#bar" className="hover:text-cyan-400">Bar</a></li>
-                                <li><a href="#video-tour" className="hover:text-cyan-400">Video-Tour</a></li>
-                                <li><a href="#staff" className="hover:text-cyan-400">Team</a></li>
-                                <li><a href="#contact" className="hover:text-cyan-400">Kontakt</a></li>
+                                <li><a href="#home" onClick={(e) => { e.preventDefault(); handleScroll('home'); }} className="hover:text-cyan-400">Startseite</a></li>
+                                <li><a href="#courses" onClick={(e) => { e.preventDefault(); handleScroll('courses'); }} className="hover:text-cyan-400">Golfplätze</a></li>
+                                <li><a href="#bar" onClick={(e) => { e.preventDefault(); handleScroll('bar'); }} className="hover:text-cyan-400">Bar</a></li>
+                                <li><a href="#video-tour" onClick={(e) => { e.preventDefault(); handleScroll('video-tour'); }} className="hover:text-cyan-400">Video-Tour</a></li>
+                                <li><a href="#staff" onClick={(e) => { e.preventDefault(); handleScroll('staff'); }} className="hover:text-cyan-400">Team</a></li>
+                                <li><a href="#contact" onClick={(e) => { e.preventDefault(); handleScroll('contact'); }} className="hover:text-cyan-400">Kontakt</a></li>
+                                <li><a href="#contact-info" onClick={(e) => { e.preventDefault(); handleScroll('contact-info'); }} className="hover:text-cyan-400">Kontaktinformationen</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -91,7 +100,7 @@
                     <div className="text-center bg-black bg-opacity-60 p-8 rounded-lg">
                         <h2 className="text-6xl font-bold neon-text mb-4">Pull in the Dark</h2>
                         <p className="text-xl mb-6">Tauche ein in neonbeleuchtete Golfplätze und genieße einen Drink an unserer lebendigen Bar.</p>
-                        <a href="#courses" className="bg-cyan-500 text-black py-3 px-6 rounded-full font-bold hover:bg-cyan-400">Jetzt Entdecken</a>
+                        <a href="#courses" onClick={(e) => { e.preventDefault(); document.getElementById('courses').scrollIntoView({ behavior: 'smooth' }); }} className="bg-cyan-500 text-black py-3 px-6 rounded-full font-bold hover:bg-cyan-400">Jetzt Entdecken</a>
                     </div>
                 </section>
             );
@@ -205,6 +214,18 @@
             );
         }
 
+        function ContactInfo() {
+            return (
+                <section id="contact-info" className="py-8 bg-gray-900">
+                    <div className="container mx-auto px-4 text-center">
+                        <h2 className="text-3xl font-bold neon-text mb-6">Unsere Kontaktinformationen</h2>
+                        <p className="text-lg text-gray-300 mb-2">Email: <a href="mailto:pitd@gmail.com" className="text-cyan-400 hover:underline">pitd@gmail.com</a></p>
+                        <p className="text-lg text-gray-300">Phone: <a href="tel:+48654321432" className="text-cyan-400 hover:underline">+48 654 321 432</a></p>
+                    </div>
+                </section>
+            );
+        }
+
         function Footer() {
             return (
                 <footer className="bg-black bg-opacity-80 py-6 border-t-2 border-cyan-400">
@@ -225,6 +246,7 @@
                     <VideoTour />
                     <Staff />
                     <Contact />
+                    <ContactInfo />
                     <Footer />
                 </div>
             );
@@ -233,5 +255,6 @@
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
     </script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'934fa0582871bfa8',t:'MTc0NTQzNTA2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
