--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
                     <div className="container mx-auto px-4 text-center">
                         <h2 className="text-3xl font-bold neon-text mb-6">Unsere Kontaktinformationen</h2>
                         <p className="text-lg text-gray-300 mb-2">Email: <a href="mailto:pitd@gmail.com" className="text-cyan-400 hover:underline">pitd@gmail.com</a></p>
-                        <p className="text-lg text-gray-300">Phone: <a href="tel:+48654321432" className="text-cyan-400 hover:underline">+48 654 321 432</a></p>
+                        <p className="text-lg text-gray-300 mb-2">Phone: <a href="tel:+48654321432" className="text-cyan-400 hover:underline">+48 654 321 432</a></p>
+                        <p className="text-lg text-gray-300">Adresse: <a href="https://www.google.com/maps/search/?api=1&query=29+Christian+Keimann+Straße,+02763+Zittau" target="_blank" rel="noopener noreferrer" className="text-cyan-400 hover:underline">29 Christian-Keimann-Straße, 02763 Zittau</a></p>
                     </div>
                 </section>
             );
