--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Video-Tour</h2>
                         <div className="flex justify-center">
                             <video controls className="w-full max-w-3xl rounded-lg border border-cyan-400">
-                                <source src="/neon-golf-tour.mp4" type="video/mp4" />
+                                <source src="/neon-golf-tour-v1.mp4" type="video/mp4" />
                                 Dein Browser unterstützt das Video-Tag nicht.
                             </video>
                         </div>
