--- a/index.html
+++ b/index.html
@@ -1,3 +1,43 @@
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +47,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.development.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.development.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.20.6/babel.min.js" data-type="module"></script>
-    <script src="https://cdn.sheetjs.com/xlsx-0.20.3/package/dist/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.20.6/babel.min.js"></script>
     <style>
         @keyframes neonGlow {
             0% { text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #ff00ff, 0 0 40px #ff00ff; }
@@ -21,67 +60,12 @@
         body {
             background: linear-gradient(135deg, #1a1a40 0%, #000033 100%);
         }
-        @keyframes slideFadeIn {
-            from {
-                opacity: 0;
-                transform: translateX(-50px);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-        .animate-section {
-            opacity: 0;
-            transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-        }
-        .animate-section.visible {
-            opacity: 1;
-            animation: slideFadeIn 0.5s ease-out forwards;
-        }
-        /* Fallback for no JavaScript */
-        .no-js .animate-section {
-            opacity: 1;
-        }
     </style>
 </head>
 <body class="text-white font-sans">
     <div id="root"></div>
 
-    <script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-            return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-            if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-                try {
-                    var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                    var firstSheetName = workbook.SheetNames[0];
-                    var worksheet = workbook.Sheets[firstSheetName];
-                    var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                    var filteredData = jsonData.filter(row => row.some(filledCell));
-                    var headerRowIndex = filteredData.findIndex((row, index) =>
-                        row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                    );
-                    if (headerRowIndex === -1 || headerRowIndex > 25) {
-                        headerRowIndex = 0;
-                    }
-                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
-                    csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                    return csv;
-                } catch (e) {
-                    console.error('Error in loadFileData:', e);
-                    return "";
-                }
-            }
-            return gk_fileData[filename] || "";
-        }
-    </script>
-
-    <script type="text/babel" data-presets="react">
+    <script type="text/babel">
         function Header() {
             const handleScroll = (id) => {
                 const element = document.getElementById(id);
@@ -112,7 +96,7 @@
 
         function Hero() {
             return (
-                <section id="home" className="h-screen flex items-center justify-center bg-cover bg-center animate-section" style={{ backgroundImage: "url('https://cdn.prod.website-files.com/62a7764c17286f703aca51d4/62fff0a1a23f224689fe677a_Glo%20Mini27.jpg')" }}>
+                <section id="home" className="h-screen flex items-center justify-center bg-cover bg-center" style={{ backgroundImage: "url('https://cdn.prod.website-files.com/62a7764c17286f703aca51d4/62fff0a1a23f224689fe677a_Glo%20Mini27.jpg')" }}>
                     <div className="text-center bg-black bg-opacity-60 p-8 rounded-lg">
                         <h2 className="text-6xl font-bold neon-text mb-4">Pull in the Dark</h2>
                         <p className="text-xl mb-6">Tauche ein in neonbeleuchtete Golfplätze und genieße einen Drink an unserer lebendigen Bar.</p>
@@ -130,7 +114,7 @@
             ];
 
             return (
-                <section id="courses" className="py-16 animate-section">
+                <section id="courses" className="py-16">
                     <div className="container mx-auto px-4">
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Unsere Neon-Golfplätze</h2>
                         <div className="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -152,7 +136,7 @@
 
         function Bar() {
             return (
-                <section id="bar" className="py-16 bg-gray-900 animate-section">
+                <section id="bar" className="py-16 bg-gray-900">
                     <div className="container mx-auto px-4">
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Neon-Bar</h2>
                         <div className="flex flex-col md:flex-row items-center gap-8">
@@ -169,7 +153,7 @@
 
         function VideoTour() {
             return (
-                <section id="video-tour" className="py-16 animate-section">
+                <section id="video-tour" className="py-16">
                     <div className="container mx-auto px-4">
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Video-Tour</h2>
                         <div className="flex justify-center">
@@ -193,7 +177,7 @@
             ];
 
             return (
-                <section id="staff" className="py-16 animate-section">
+                <section id="staff" className="py-16">
                     <div className="container mx-auto px-4">
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Unser Team</h2>
                         <div className="grid grid-cols-1 md:grid-cols-4 gap-8">
@@ -214,7 +198,7 @@
 
         function Contact() {
             return (
-                <section id="contact" className="py-16 bg-gray-900 animate-section">
+                <section id="contact" className="py-16 bg-gray-900">
                     <div className="container mx-auto px-4">
                         <h2 className="text-4xl font-bold text-center neon-text mb-12">Kontaktiere Uns</h2>
                         <div className="max-w-lg mx-auto">
@@ -232,7 +216,7 @@
 
         function ContactInfo() {
             return (
-                <section id="contact-info" className="py-8 bg-gray-900 animate-section">
+                <section id="contact-info" className="py-8 bg-gray-900">
                     <div className="container mx-auto px-4 text-center">
                         <h2 className="text-3xl font-bold neon-text mb-6">Unsere Kontaktinformationen</h2>
                         <p className="text-lg text-gray-300 mb-2">Email: <a href="mailto:pitd@gmail.com" className="text-cyan-400 hover:underline">pitd@gmail.com</a></p>
@@ -271,32 +255,7 @@
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(<App />);
-
-        // Intersection Observer to trigger animations
-        document.addEventListener('DOMContentLoaded', () => {
-            try {
-                const sections = document.querySelectorAll('.animate-section');
-                if (sections.length === 0) {
-                    console.warn('No .animate-section elements found');
-                }
-                const observer = new IntersectionObserver((entries) => {
-                    entries.forEach(entry => {
-                        if (entry.isIntersecting) {
-                            entry.target.classList.add('visible');
-                            observer.unobserve(entry.target);
-                        }
-                    });
-                }, {
-                    threshold: 0.1
-                });
-
-                sections.forEach(section => {
-                    observer.observe(section);
-                });
-            } catch (e) {
-                console.error('Error setting up Intersection Observer:', e);
-            }
-        });
     </script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'934fa0582871bfa8',t:'MTc0NTQzNTA2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
