--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 
         function Staff() {
             const staff = [
-                { name: "Elizabeth Korzh", role: "Managerin", image: "https://meadia.discordapp.net/attachments/1022913165194960987/1364543227075756072/IMG-20250423-WA0012.jpg?ex=680ab629&is=680964a9&hm=d996de118ad30e7a8cf7391f355803cf05661a262dd9a809f242463d6789bc78&" },
+                { name: "Elizabeth Korzh", role: "Managerin", image: "https://media.discordapp.net/attachments/827563505376559156/1364887000842502195/IMG-20250423-WA0012.jpg?ex=680b4d93&is=6809fc13&hm=d01734c7026944523e8212534a1d0b6adc2d8393cddfb63c756136cbd19ee5ad&=&format=webp&width=878&height=820" },
                 { name: "Duc Anh Nguyen", role: "Event-Koordinator", image: "https://scontent-fra5-2.xx.fbcdn.net/v/t39.30808-6/480672117_1677441039865916_3972564417499775765_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EihGID_PzKUQ7kNvwFhl0pq&_nc_oc=Adn2t7gWtaZPZux_-enaGCOQsTxigQdXjclFritaWoWX-4ZtqEcyvr6GoBMq86rmMI0&_nc_zt=23&_nc_ht=scontent-fra5-2.xx&_nc_gid=8HvbrhJkGRMAO-wthLs4pQ&oh=00_AfHRt3UeNKQEAYkk9PcarSHejP4L1Ow47ZCI-RN_GFW8hA&oe=680C4F55" },
-                { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/1022913165194960987/1363956928627343360/IMG-20250421-WA0009.jpg?ex=6809e5a0&is=68089420&hm=de67c40f2779f762b9be6e7277d2008fbe1b3f906f29d21f6c6bbb7598e60a51=&format=webp&width=1214&height=930" },
+                { name: "Thi Kieu Trieu", role: "Barkeeperin", image: "https://media.discordapp.net/attachments/827563505376559156/1364887046845370431/IMG-20250421-WA0009.jpg?ex=680b4d9e&is=6809fc1e&hm=bec72a156f26e7cde5822c5d70553bb03c8f39d06cb1d2ac79f4c731026eb860&=&format=webp&width=960&height=735" },
                 { name: "Diya", role: "Kundenservice", image: "https://media.discordapp.net/attachments/1022913165194960987/1363961128564162670/IMG-20250421-WA0010.jpg?ex=6809e98a&is=6808980a&hm=7444db6bfef4620183a417e886ae80d8ccfb8adcfeb71a21c72d8b3050ca9e05=&format=webp&width=589&height=770" }
             ];
 
